fix features cook overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,11 @@ features
 */
 .features .image-feature {
   position: relative;
-  min-width: 150px;
+  min-width: 10rem;
+}
+
+.features .container-image {
+  min-width: 10rem;
 }
 
 .features .transparent {
@@ -185,8 +189,7 @@ features
   position: absolute;
   top: 1rem;
   left: 1rem;
-  width: 10rem;
-  height: 7rem;
+  width: 9rem;
 }
 
 .features .person-img {
